--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@ actions-runner/externals/node24/bin/node filter=lfs diff=lfs merge=lfs -text
 actions-runner/externals/node24_alpine/bin/node filter=lfs diff=lfs merge=lfs -text
 actions-runner/actions-runner-linux-x64-2.329.0.tar.gz filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
+actions-runner/externals/node*/bin/node filter=lfs diff=lfs merge=lfs -text
