--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -90,15 +90,16 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 # Run SonarCloud scan
             # Run SonarCloud scan
-# Run SonarCloud scan
+  # Run SonarCloud scan
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: .
           args: >
-            -Dsonar.organizaton=${{ secrets.SONAR_ORGANIZATION }}
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.sources=.
 
       #  Push Docker image
       - name: Push Docker image
