--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,21 +11,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      #  Checkout source code
+
+      # =============================================================
+      # 🎯 CI/CD PIPELINE WITH SECURITY SCANS — FULL WORKFLOW SECTION
+      # =============================================================
+      - name: Start CI/CD Workflow Section
+        run: echo "Starting full CI/CD pipeline with integrated security scans..."
+
+      # -----------------------------------------------------------------
+      # 1️⃣ CHECKOUT SOURCE CODE
+      # -----------------------------------------------------------------
       - name: Checkout code
         uses: actions/checkout@v4
 
-      #  Set up Python
+      # -----------------------------------------------------------------
+      # 2️⃣ SETUP PYTHON ENVIRONMENT
+      # -----------------------------------------------------------------
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      #  Install dependencies
+      # -----------------------------------------------------------------
+      # 3️⃣ INSTALL DEPENDENCIES
+      # -----------------------------------------------------------------
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      #  Run tests
+      # -----------------------------------------------------------------
+      # 4️⃣ RUN PYTHON UNIT TESTS
+      # -----------------------------------------------------------------
       - name: Run tests
         run: |
           if [ -f "requirements-test.txt" ]; then
@@ -33,18 +48,24 @@ jobs:
           fi
           pytest || echo "Tests failed or no tests found - continuing pipeline"
 
-      #  Build Docker image
+      # -----------------------------------------------------------------
+      # 5️⃣ BUILD DOCKER IMAGE
+      # -----------------------------------------------------------------
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }} .
 
-      #  Run Gitleaks scan
+      # -----------------------------------------------------------------
+      # 6️⃣ GITLEAKS — SECRET SCAN
+      # -----------------------------------------------------------------
       - name: Run Gitleaks scan
         uses: zricethezav/gitleaks-action@v2
         with:
           args: detect --source . --report-format sarif --report-path gitleaks-report.sarif --verbose
 
-      #  Trivy vulnerability scan (console + JSON)
-      - name: Trivy vulnerability scan
+      # -----------------------------------------------------------------
+      # 7️⃣ TRIVY SCAN — IMAGE VULNERABILITIES
+      # -----------------------------------------------------------------
+      - name: Trivy vulnerability scan (table)
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
@@ -54,7 +75,7 @@ jobs:
           ignore-unfixed: true
           exit-code: 1
 
-      - name: Generate Trivy JSON report
+      - name: Trivy vulnerability scan (json)
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
@@ -64,17 +85,19 @@ jobs:
           ignore-unfixed: true
           exit-code: 0
 
-      #  Display Trivy results summary
+      # -----------------------------------------------------------------
+      # 8️⃣ DISPLAY TRIVY SUMMARY
+      # -----------------------------------------------------------------
       - name: Display vulnerability summary
         run: |
           if [ -f "trivy-report.json" ]; then
-            CRITICAL=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
-            HIGH=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "HIGH") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
-            MEDIUM=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "MEDIUM") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
-            LOW=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "LOW") | .VulnerabilityID' trivy-report.json 2>/dev/null | wc -l || echo "0")
-            
+            CRITICAL=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "CRITICAL")' trivy-report.json | wc -l)
+            HIGH=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "HIGH")' trivy-report.json | wc -l)
+            MEDIUM=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "MEDIUM")' trivy-report.json | wc -l)
+            LOW=$(jq '.Results[].Vulnerabilities[]? | select(.Severity == "LOW")' trivy-report.json | wc -l)
+
             echo "Critical: $CRITICAL"
-            echo "High: $HIGH" 
+            echo "High: $HIGH"
             echo "Medium: $MEDIUM"
             echo "Low: $LOW"
             echo "Total: $((CRITICAL + HIGH + MEDIUM + LOW))"
@@ -82,15 +105,18 @@ jobs:
             echo "No vulnerability data available"
           fi
 
-      #  Log in to DockerHub
+      # -----------------------------------------------------------------
+      # 9️⃣ DOCKER HUB AUTHENTICATION
+      # -----------------------------------------------------------------
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-# Run SonarCloud scan
-            # Run SonarCloud scan
-  # Run SonarCloud scan
+
+      # -----------------------------------------------------------------
+      # 🔟 SONARCLOUD SCAN (STATIC CODE ANALYSIS)
+      # -----------------------------------------------------------------
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5.0.0
         env:
@@ -101,11 +127,16 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.sources=.
 
-      #  Push Docker image
+      # -----------------------------------------------------------------
+      # 1️⃣1️⃣ PUSH DOCKER IMAGE → DOCKER HUB
+      # -----------------------------------------------------------------
       - name: Push Docker image
         if: success()
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/kali-test:${{ github.sha }}
 
+      # -----------------------------------------------------------------
+      # 1️⃣2️⃣ UPLOAD SECURITY ARTIFACTS
+      # -----------------------------------------------------------------
       - name: Upload security reports
         uses: actions/upload-artifact@v4
         with:
@@ -116,7 +147,9 @@ jobs:
             trivy-report.txt
           retention-days: 7
 
-      # 12. Send full payload to Jenkins
+      # -----------------------------------------------------------------
+      # 1️⃣3️⃣ SEND PIPELINE METADATA TO JENKINS
+      # -----------------------------------------------------------------
       - name: Send build info to Jenkins
         if: always()
         env:
@@ -138,11 +171,8 @@ jobs:
             --argjson trivy "$TRIVY_JSON" \
             '{commit: $commit, branch: $branch, repo: $repo, image: $image, trivy_report: $trivy, summary_text: $summary_text, pipeline_status: $pipeline_status, timestamp: $timestamp}')
 
-
-          echo "Final payload to Jenkins:"
           echo "$PAYLOAD" | jq .
 
-          # Send to Jenkins webhook
           curl -v -X POST "https://accusatorial-unslighted-merlin.ngrok-free.dev/generic-webhook-trigger/invoke?token=github-ci-token" \
             -H "Content-Type: application/json" \
             -d "$PAYLOAD"
