--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     ports:
       - "3001:3000"  # Grafana will be available at http://localhost:3001
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=${grafana_pass}
     depends_on:
       - prometheus
     networks:
